      BGP: Handle ORF in Route-Refresh messages
      BGP: add dissector for BGPsec capability and path
      BGP: Add Origin Validation State extended community
      BGP: Add support for BGP Role capability and OTC attribute
    User interface:
      Add optional unit suffix on -C file size.
      Add --print-sampling to print every Nth packet instead of all.
    Source code:
      Use %zu when printing a sizeof to squelch compiler warnings
      Remove unused missing/snprintf.c.
      Remove unused missing/strdup.c.
      (FIXME: somebody please wrap the line below just before the release)
      AODV, AppleTalk, BOOTP, CHDLC, DCCP, EAP, EGP, EIGRP, ForCES, Geneve, GRE, ICMP, Juniper, L2TP, mobile, NetFlow, NTP, OLSR, PGM, RADIUS, RIP, RSVP, SCTP, SNMP, TCP, UDP, vsock: Modernize packet parsing style
      DCCP, EGP: Replace custom code with tok2str()
      UDP: Clean up address and port printing.
      AppleTalk: Declutter appletalk.h.
      IEEE 802.11: Simplify handle_action().
    Building and testing:
      autoconf: Add autogen.sh, remove configure and config.h.in and put
        these generated files in the release tarball.
      autoconf: Update install-sh script to the latest available version.
      Autoconf: Remove detection of early IPv6 stacks.
      Detect OS IPv6 support using AF_INET6 only.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.5 tcpdump release (so far!)
    Refine protocol decoding for:
      Arista: Use the test .pcap file from pull request #955 (HwInfo).
      BGP: Fix an undefined behavior when it tries to parse a too-short packet.
      CARP: Print the protocol name before any GET_().
      CDP: only hex-dump unknown TLVs in verbose mode.
      DHCP: parse the SZTP redirect tag.
      DHCPv6: client-id/server-id DUID type 2 correction; Parse the user class,          boot file URL, and SZTP redirect options; Add DUID-UUID printing
         (RFC6355).
      EAP: Assign ndo_protocol in the eap_print() function.